[tool.poetry]
name = "ssh_util"
version = "0.1.0"
description = "ssh command utility"
authors = ["Takayuki Shimizukawa <shimizukawa@gmail.com>"]
license = "Apache-2.0"
readme = "README.rst"
include = ["CHANGELOG.rst"]

[tool.poetry.dependencies]
python = "^3.6"
cryptography = "^2.6"

[tool.poetry.dev-dependencies]
towncrier = "^19.2"

[build-system]
requires = ["poetry>=0.12", "setuptools>=30.3.0", "wheel", "setuptools_scm"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
ssh_util = "ssh_util.main:main"

[tool.towncrier]
package = "ssh_util"
package_dir = "."
filename = "CHANGELOG.rst"
directory = "changelog/"
title_format = "{version} ({project_date})"
template = "changelog/_template.rst"

  [[tool.towncrier.type]]
  directory = "removal"
  name = "Feature Removed"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "deprecation"
  name = "Deprecation"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "feature"
  name = "New Feature"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "bugfix"
  name = "Bug Fix"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "vendor"
  name = "Dependencies Update"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "doc"
  name = "Documentation"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "trivial"
  name = "Trivial"
  showcontent = true
